cluster/apps/wallabag/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wallabag
  namespace: wallabag
  labels:
    app: wallabag
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wallabag
  template:
    metadata:
      labels:
        app: wallabag
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: wallabag
          image: ghcr.io/wallabag/docker:2.6.10
          ports:
            - containerPort: 80
          volumeMounts:
            - name: data
              mountPath: /var/www/wallabag/var
            - name: images
              mountPath: /var/www/wallabag/web/assets/images
          resources:
            requests:
              memory: "256Mi"
              cpu: "150m"
            limits:
              memory: "768Mi"
              cpu: "1000m"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: wallabag-data
        - name: images
          persistentVolumeClaim:
            claimName: wallabag-images
