cluster/apps/wallabag/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wallabag
  namespace: wallabag
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`wallabag.homelab.local`)
      kind: Rule
      services:
        - name: wallabag
          port: 80
